--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,7 +49,7 @@ jobs:
         # curl -L https://github.com/golang-migrate/migrate/releases/download/v4.14.1/migrate.linux-amd64.tar.gz | tar xvz
         # sudo mv migrate.linux-amd64 /usr/bin/migrate
         curl -L https://github.com/golang-migrate/migrate/releases/download/v4.16.2/migrate.linux-amd64.tar.gz | tar xvz
-        sudo mv migrate.linux-amd64/migrate /usr/bin/migrate
+        sudo mv migrate /usr/bin/migrate
         which migrate
 
     - name: Run migrations
